# AimTrainer

./: CMakeLists.txt
app/: CMakeLists.txt
ecs/: CMakeLists.txt
gfx/: CMakeLists.txt
src/: main.cpp
